--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,29 +9,28 @@ repos:
       - id: check-merge-conflict
       - id: debug-statements
       - id: check-docstring-first
-      
+
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
       - id: black
         language_version: python3
         args: [--line-length=100]
-        
+
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
       - id: flake8
-        args: [--max-line-length=100, --extend-ignore=E203,W503]
-        
+
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
         args: [--profile=black, --line-length=100]
-        
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.3.0
     hooks:
       - id: mypy
         additional_dependencies: [types-PyYAML, types-requests]
-        args: [--ignore-missing-imports]
+        args: [--ignore-missing-imports, --no-strict-optional]
