--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [build-system]
-requires = ["setuptools>=45", "wheel", "setuptools_scm"]
+requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ai-edit"
-dynamic = ["version"]
+version = "0.1.0"
 description = "A command-line AI code editor that uses Azure OpenAI to make intelligent changes to your codebase"
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
-    {name = "Denis Bystruev", email = "denis@bystruev.com"}
+    {name = "Denis Bystruev", email = "dbystruev@me.com"}
 ]
 keywords = ["ai", "code-editor", "cli", "azure", "openai", "automation"]
 classifiers = [
@@ -61,11 +61,10 @@ Repository = "https://github.com/yourusername/ai-edit.git"
 [project.scripts]
 ai-edit = "ai_edit.cli:main"
 
-[tool.setuptools]
-packages = ["ai_edit", "ai_edit.config"]
+[tool.setuptools.packages.find]
+where = ["."]
 
-[tool.setuptools_scm]
-write_to = "ai_edit/_version.py"
+
 
 [tool.black]
 line-length = 100
@@ -88,17 +87,17 @@ extend-exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.8"
-warn_return_any = true
+python_version = "3.9"
+warn_return_any = false
 warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = false
+disallow_untyped_decorators = false
 no_implicit_optional = true
 warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
+warn_unused_ignores = false
+warn_no_return = false
 warn_unreachable = true
 strict_equality = true
 
