--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "pathspec>=0.11.0",
     "gitpython>=3.1.0",
     "rich>=13.0.0",
+    "certifi",
 ]
 
 [project.optional-dependencies]
